# NLMOO23

./: LICENSE  README.md  pyproject.toml  requirements.txt
8Queens/: 1D.ipynb
notebooks/: 01 Installing DESDEO.ipynb  02 Defining a problem.ipynb  03 The payoff-table method_example.ipynb  04 Scalarizing functions_example.ipynb  8Queens.ipynb  APD locus.ipynb
